--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,5 +12,5 @@ pages:
   - foo: my_module_1/foo.md
 - my_module_2:
   - Introduction: my_module_2/index.md
-  - All Module Functions: my_module_2/all_module_functions.md
+  - All Functions Module: my_module_2/all_functions_module.md
   - foo: my_module_2/foo.md
