--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ pages:
 - my_module_1:
   - Introduction: my_module_1/index.md
   - Some Functions: my_module_1/some_functions.md
-  - foo: my_module_1/foo.md
+  - Some Classes: my_module_1/some_classes.md
 - my_module_2:
   - Introduction: my_module_2/index.md
   - All Functions Module: my_module_2/all_functions_module.md
